fix scaling on front page when on small device

--- a/src/sections/landing/landing.scss
+++ b/src/sections/landing/landing.scss
@@ -1,14 +1,14 @@
 .landing {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   color: white;
 
   .content {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     align-items: center;
     justify-content: center;
     background-color: rgba(37, 37, 37, 0.9);
@@ -111,6 +111,10 @@
         grid-template-columns: 18rem 18rem 18rem 18rem;
         @media screen and (max-width: 800px) {
           grid-template-columns: 100%;
+
+          &:last-child {
+            margin-bottom: 15px;
+          }
         }
         gap: 15px;
 
